--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="parent">
           <div class="video-container">
             <video controls>
-              <source src="asset/video intro.mp4" type="video/mp4" />
+              <source src="asset/video intro (1).mp4" type="video/mp4" />
             </video>
           </div>
         </div>
