--- a/index.html
+++ b/index.html
@@ -51,10 +51,35 @@
         </p>
       </div>
       <!-- ini adalah visi Misi -->
-       <div class="visi-misi">
-          <img src="" alt="">
-          <!-- akan launcing besok di kampus -->
-       </div>
+       <div class="visi-misi-container">
+          <h2>Visi, Misi & Tujuan</h2>
+           <div class="visi-misi-content">
+    <div class="visi-misi-image">
+      <img src="asset/visi-misi.jpg" alt="Gambar Visi Misi">
+    </div>
+    <div class="visi-misi-box">
+      <h3>VISI</h3>
+      <p>Menjadi Universitas unggul menghasilkan Sumberdaya Manusia Technopreneurship Tahun 2047</p>
+      <p><b>Penjelasan Visi:</b></p>
+      <ul>
+        <li>Universitas unggul di bidang teknologi informasi & kewirausahaan.</li>
+        <li>Lulusan berkarakter & berkepribadian.</li>
+        <li>Sumber daya manusia unggul di bidang informatika, administrasi publik, hukum, entrepreneurship.</li>
+        <li>Technopreneurship: peluang → usaha berbasis teknologi.</li>
+        <li>Teknologi Informasi: teknologi olah data menjadi informasi.</li>
+      </ul>
+
+      <h3>MISI</h3>
+      <ul>
+        <li>Pendidikan tinggi bercirikan technopreneurship.</li>
+        <li>Penelitian ciptakan lapangan kerja baru.</li>
+        <li>Pengabdian masyarakat berbasis teknologi.</li>
+        <li>Kerjasama kemandirian pendidikan tinggi.</li>
+        <li>Tata kelola kredibel, transparan, akuntabel, adil.</li>
+      </ul>
+    </div>
+  </div>
+</div>
       <!-- end of visi misi -->
       
       <!-- ini adalah fakultas -->
