--- a/form.html
+++ b/form.html
@@ -14,7 +14,7 @@
       </div>
       <div class="hamburger" id="hamburger">&#9776;</div>
       <ul id="nav-list" class="hidden">
-        <li><a href="#index.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#contact">Contact Us</a></li>
       </ul>
