--- a/form.html
+++ b/form.html
@@ -19,5 +19,31 @@
         <li><a href="#contact">Contact Us</a></li>
       </ul>
     </nav>
+
+<!--     Ini adalah Form Pendaftaran Maba -->
+     <div class="container-big">
+        <div class="form-container">
+          <h2>PMB Handayani 2025</h2>
+          <form action="#">
+            <input type="text" name="nama" placeholder="Nama Lengkap" required />
+            <input type="email" name="email" placeholder="Email Aktif" required />
+            <input type="text" name="nohp" placeholder="Nomor HP / WhatsApp" required />
+            <input type="text" name="alamat" placeholder="Alamat Rumah" required />
+
+            <select name="jurusan" required>
+              <option value="">Pilih Jurusan</option>
+              <option value="Teknik Informatika">Teknik Informatika</option>
+              <option value="Sistem Informasi">Sistem Informasi</option>
+              <option value="Manajemen Informatika">Manajemen Informatika</option>
+              <option value="Hukum">Hukum</option>
+              <option value="Administrasi Publik">Administrasi Publik</option>
+              <option value="Kewirausahaan">Kewirausahaan</option>
+            </select>
+
+            <button type="submit">Daftar Sekarang</button>
+          </form>
+        </div>
+      </div>
+<!--end of Pendaftara  -->
   </body>
 </html>
