--- a/form.html
+++ b/form.html
@@ -20,7 +20,7 @@
       </ul>
     </nav>
 
-<!--     Ini adalah Form Pendaftaran Maba -->
+<!--     Ini adalah Form Pendaftaran Maba  2025-->
     <div class="form-container">
         <h2>Pendaftaran Mahasiswa Baru</h2>
         <form action="#">
