--- a/form.html
+++ b/form.html
@@ -22,7 +22,7 @@
 
 <!--     Ini adalah Form Pendaftaran Maba  2025-->
     <div class="form-container">
-        <h2>Pendaftaran Mahasiswa Baru</h2>
+        <h2>PMB HANDAYANI 2025</h2>
         <form action="#">
             <h4>Data Pribadi</h4>
             <input type="text" name="nama" placeholder="Nama Mahasiswa" required>
