--- a/form.html
+++ b/form.html
@@ -80,5 +80,12 @@
         </form>
     </div>
 <!--end of Pendaftara  -->
+<!--     Ini adalah Footer -->
+      <footer class="footer">
+      <p>&copy; 2025 Universitas Handayani Makassar.</p>
+    </footer>
+    <!-- end of footer -->
+    <script src="script.js"></script>
+
   </body>
 </html>
