--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
         <h4>-UHM-</h4>
       </div>
       <div class="hamburger" id="hamburger">&#9776;</div>
-      <ul id="nav-list" class="hidden">
+     <ul id="nav-list" class="hidden">
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact Us</a></li>
+        <li><a href="form.html">Pendaftaran Maba</a></li>
+        <li><a href="contct.html">Contact Us</a></li>
       </ul>
     </nav>
     <!--end navbar -->
