--- a/form.html
+++ b/form.html
@@ -15,77 +15,90 @@
       <div class="hamburger" id="hamburger">&#9776;</div>
       <ul id="nav-list" class="hidden">
         <li><a href="index.html">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact Us</a></li>
+
+        <li><a href="contct.html">Contact Us</a></li>
       </ul>
     </nav>
-
-<!--     Ini adalah Form Pendaftaran Maba  2025-->
-    <div class="form-container">
-        <h2>PMB HANDAYANI 2025</h2>
-        <form action="#">
-            <h4>Data Pribadi</h4>
-            <input type="text" name="nama" placeholder="Nama Mahasiswa" required>
-            <input type="text" name="tempat" placeholder="Tempat Lahir" required>
-            <input type="date" name="tanggal" required>
-            
-            <select name="jenis_kelamin" required>
-                <option value="">Pilih Jenis Kelamin</option>
-                <option value="Laki-laki">Laki-laki</option>
-                <option value="Perempuan">Perempuan</option>
-            </select>
-
-            <input type="text" name="agama" placeholder="Agama" required>
-            <input type="text" name="negara" placeholder="Negara" required>
-            <input type="text" name="kota" placeholder="Kabupaten / Kota" required>
-            <input type="text" name="provinsi" placeholder="Provinsi" required>
-            <input type="text" name="alamat" placeholder="Alamat" required>
-            <input type="text" name="kodepos" placeholder="Kode Pos" required>
-            <input type="text" name="nohp" placeholder="No. HP" required>
-
-            <h4>Data Orang Tua</h4>
-            <input type="text" name="ayah" placeholder="Nama Ayah" required>
-            <select name="status_ayah">
-                <option value="">Status Ayah</option>
-                <option value="Hidup">Hidup</option>
-                <option value="Meninggal">Meninggal</option>
-            </select>
-
-            <input type="text" name="ibu" placeholder="Nama Ibu" required>
-            <select name="status_ibu">
-                <option value="">Status Ibu</option>
-                <option value="Hidup">Hidup</option>
-                <option value="Meninggal">Meninggal</option>
-            </select>
-
-            <input type="text" name="alamat_ortu" placeholder="Alamat Orang Tua" required>
-            <input type="text" name="nohp_ortu" placeholder="No. HP Orang Tua" required>
-
-            <h4>Program Studi & Fakultas</h4>
-            <select name="prodi" required>
-                <option value="">Pilih Program Studi 1</option>
-                <option value="Teknik Informatika">Teknik Informatika S1</option>
-                <option value="Sistem Komputer">Sistem Komputer S1</option>
-                <option value="Sistem Informasi">Sistem Informasi S1</option>
-                <option value="Pendidikan Teknologi Informasi">Pendidikan Teknologi Informasi S1</option>
-                <option value="Hukum">Hukum S1</option>
-                <option value="Kewirausahaan">Kewirausahaan S1</option>
-                <option value="Manajemen Informatika">Manajemen Informatika D3</option>
-            </select>
-
-            <div class="button-group">
-                <button type="submit">Daftar</button>
-                <button type="reset" class="hapus">Hapus</button>
-            </div>
-        </form>
+    <!-- intro PMB-->
+    <div class="headline">
+      <h1>UNIVERSITAS HANDAYANI MAKASSAR (UHM)</h1>
+      <h3>Unggul Dalam Menciptakan SDM Technopreneurship dan Pendidik Profesional Berbasis Teknologi Informasi</h3>
+      <p>"Apapun Cita-Cita Anda, UHM Solusinya"</p>
     </div>
-<!--end of Pendaftara  -->
-<!--     Ini adalah Footer -->
-      <footer class="footer">
+
+    <!-- End Of Intro -->
+    <!-- Ini adalah Form Pendaftaran Maba 2025-->
+    <div class="form-container">
+      <h2>PMB HANDAYANI 2025</h2>
+      <form action="#" id="formPendaftaran">
+        <h4>Data Pribadi</h4>
+        <input type="text" name="nama" placeholder="Nama Mahasiswa" required />
+        <input type="text" name="tempat" placeholder="Tempat Lahir" required />
+        <input type="date" name="tanggal" required />
+
+        <select name="jenis_kelamin" required>
+          <option value="">Pilih Jenis Kelamin</option>
+          <option value="Laki-laki">Laki-laki</option>
+          <option value="Perempuan">Perempuan</option>
+        </select>
+
+        <input type="text" name="agama" placeholder="Agama" required />
+        <input type="text" name="negara" placeholder="Negara" required />
+        <input type="text" name="kota" placeholder="Kabupaten / Kota" required />
+        <input type="text" name="provinsi" placeholder="Provinsi" required />
+        <input type="text" name="alamat" placeholder="Alamat" required />
+        <input type="text" name="kodepos" placeholder="Kode Pos" required />
+        <input type="text" name="nohp" placeholder="No. HP" required />
+
+        <h4>Data Orang Tua</h4>
+        <input type="text" name="ayah" placeholder="Nama Ayah" required />
+        <select name="status_ayah">
+          <option value="">Status Ayah</option>
+          <option value="Hidup">Hidup</option>
+          <option value="Meninggal">Meninggal</option>
+        </select>
+
+        <input type="text" name="ibu" placeholder="Nama Ibu" required />
+        <select name="status_ibu">
+          <option value="">Status Ibu</option>
+          <option value="Hidup">Hidup</option>
+          <option value="Meninggal">Meninggal</option>
+        </select>
+
+        <input type="text" name="alamat_ortu" placeholder="Alamat Orang Tua" required />
+        <input type="text" name="nohp_ortu" placeholder="No. HP Orang Tua" required />
+
+        <h4>Program Studi & Fakultas</h4>
+        <select name="prodi" required>
+          <option value="Pilih Program Studi"></option>
+          <option value="Teknik Informatika">Teknik Informatika S1</option>
+          <option value="Sistem Komputer">Sistem Komputer S1</option>
+          <option value="Sistem Informasi">Sistem Informasi S1</option>
+          <option value="Pendidikan Teknologi Informasi">Pendidikan Teknologi Informasi S1</option>
+          <option value="Hukum">Hukum S1</option>
+          <option value="Kewirausahaan">Kewirausahaan S1</option>
+          <option value="Manajemen Informatika">Manajemen Informatika D3</option>
+        </select>
+
+        <div class="button-group">
+          <button type="submit" class="submit">Daftar</button>
+        </div>
+      </form>
+    </div>
+    <!--end of Pendaftara  -->
+    <!-- Modal Pop-Up -->
+    <div class="modal" id="modalBerhasil">
+      <div class="modal-content">
+        <p>✅ Anda Berhasil Mendaftar!</p>
+        <button id="tutupModal">Tutup</button>
+      </div>
+    </div>
+    <!-- end modal -->
+    <!-- footer -->
+    <footer class="footer">
       <p>&copy; 2025 Universitas Handayani Makassar.</p>
     </footer>
     <!-- end of footer -->
     <script src="script.js"></script>
-
   </body>
 </html>
