--- a/form.html
+++ b/form.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+<!--     ini untuk navigasi -->
     <nav>
       <div class="nav-image">
         <img src="asset/Logo_Universitas_Handayani_Makassar.png" alt="UHM" />
@@ -15,10 +16,12 @@
       <div class="hamburger" id="hamburger">&#9776;</div>
       <ul id="nav-list" class="hidden">
         <li><a href="index.html">Home</a></li>
-
+        <li><a href="#about">About</a></li>
+        <li><a href="form.html">Pendaftaran Maba</a></li>
         <li><a href="contct.html">Contact Us</a></li>
       </ul>
     </nav>
+<!--  end of navigasi -->
     <!-- intro PMB-->
     <div class="headline">
       <h1>UNIVERSITAS HANDAYANI MAKASSAR (UHM)</h1>
