--- a/form.html
+++ b/form.html
@@ -16,7 +16,7 @@
       <div class="hamburger" id="hamburger">&#9776;</div>
       <ul id="nav-list" class="hidden">
         <li><a href="index.html">Home</a></li>
-        <li><a href="#about">About</a></li>
+        <li><a href="index.html">About</a></li>
         <li><a href="form.html">Pendaftaran Maba</a></li>
         <li><a href="contct.html">Contact Us</a></li>
       </ul>
