--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
           melalui Tim Robotika TRASH dan pengembangan skill mahasiswa lainnya.
         </p>
       </div>
-      <!-- ini adalah visi Misi -->
-       <div class="visi-misi-container">
-          <h2>Visi, Misi & Tujuan</h2>
-           <div class="visi-misi-content">
+      <!-- Visi Misi Section -->
+<div class="visi-misi-container">
+  <h2>Visi, Misi & Tujuan</h2>
+  <div class="visi-misi-content">
     <div class="visi-misi-box">
       <h3>VISI</h3>
       <p>Menjadi Universitas unggul menghasilkan Sumberdaya Manusia Technopreneurship Tahun 2047</p>
@@ -67,7 +67,6 @@
         <li>Teknologi Informasi: teknologi olah data menjadi informasi.</li>
       </ul>
 
-      
       <h3>MISI</h3>
       <ul>
         <li>Pendidikan tinggi bercirikan technopreneurship.</li>
@@ -79,7 +78,7 @@
     </div>
   </div>
 </div>
-      <!-- end of visi misi -->
+
       
       <!-- ini adalah fakultas -->
       <div class="departemen">
