--- a/index.html
+++ b/index.html
@@ -25,14 +25,15 @@
     <!-- Ini adalah Main -->
     <main>
       <!-- intro -->
-      <div class="intro">
-    
-        <div class="text-intro">
-          <h2>Universitas Handayani Makassar</h2>
-          <p>Universitas Handayani Makassar <span>UHM</span> dioperasikan dibawah naungan <b>Yayasan Doktor Haji Alifuddin</b> Sebelumnya dikenal dengan Yayasan Pendidkan Handayani <b>(Yaphan)</b></p>
+    <div class="intro">
+    <div class="text-intro">
+        <div class="logo-container">
+          <img src="asset/handayani.jpg" alt="Universitas Handayani Makassar" class="logo-uhm">
         </div>
-        </div>
-      </div>
+        <h2>Universitas Handayani Makassar</h2>
+        <p>Universitas Handayani Makassar <span>UHM</span> dioperasikan dibawah naungan <b>Yayasan Doktor Haji Alifuddin</b> Sebelumnya dikenal dengan Yayasan Pendidkan Handayani <b>(Yaphan)</b></p>
+    </div>
+</div>
       <!-- end intro -->
       <div class="about-you" id="about">
         <div class="toga">
