--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <!-- ini navbar --> 
     <nav>
       <div class="nav-image">
-        <img src="asset/Logo_Universitas_Handayani_Makassar.png" alt="UHM" />
         <h4>-UHM-</h4>
       </div>
       <div class="hamburger" id="hamburger">&#9776;</div>
@@ -28,7 +27,7 @@
     <div class="intro">
     <div class="text-intro">
         <div class="logo-container">
-          <img src="asset/handayani.jpg" alt="Universitas Handayani Makassar" class="logo-uhm">
+          <img src="asset/Logo_Universitas_Handayani_Makassar.png" alt="Universitas Handayani Makassar" class="logo-uhm">
         </div>
         <h2>Universitas Handayani Makassar</h2>
         <p>Universitas Handayani Makassar <span>UHM</span> dioperasikan dibawah naungan <b>Yayasan Doktor Haji Alifuddin</b> Sebelumnya dikenal dengan Yayasan Pendidkan Handayani <b>(Yaphan)</b></p>
