--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- ini navbar --> 
     <nav>
       <div class="nav-image">
+         <img src="asset/Logo_Universitas_Handayani_Makassar.png" alt="UHM" />
         <h4>-UHM-</h4>
       </div>
       <div class="hamburger" id="hamburger">&#9776;</div>
