--- a/index.html
+++ b/index.html
@@ -142,7 +142,11 @@
         </div>
       </div>
     </main>
-   
+     <!-- footer -->
+    <footer class="footer">
+      <p>&copy; 2025 Universitas Handayani Makassar.</p>
+    </footer>
+    <!-- end of footer --
     <script src="script.js"></script>
   </body>
 </html>
